Refactor overlay line content to support columns
Refactored OverlayUtil.LineContent to support multiple columns per line, enabling more flexible overlay layouts. Updated all usages to use the new column-based API, replacing direct string concatenation and item handling. Adjusted overlay rendering and sizing logic to accommodate column alignment and dynamic content. This improves overlay customization and prepares for more advanced UI features.